--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <body>
 <p>You can find more about me here:</p>
 <ul>
-	<li><a href="https://www.linkedin.com/in/andreazito>LinkedIn</a></li>
+	<li><a href="https://www.linkedin.com/in/andreazito">LinkedIn</a></li>
 	<li><a href="github.com/nivox">GitHub</a></li>
-	<li><a href="bitbucket.com/nivox>BitBucket</a></li>
-	<li><a href="http://stackoverflow.com/users/440875/nivox>StackOverflow</a></li>
+	<li><a href="bitbucket.com/nivox">BitBucket</a></li>
+	<li><a href="http://stackoverflow.com/users/440875/nivox">StackOverflow</a></li>
 </ul>
 
 </body>
